feat: Implementação da camada de dominio

--- a/projeto-rest-api/pom.xml
+++ b/projeto-rest-api/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>me.dio</groupId>
-	<artifactId>projeto-rest-api</artifactId>
+	<artifactId>main</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>projeto-rest-api</name>
 	<description>Java RESTful API criada para a Santander Open Academy</description>
